{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 233,
  "lineage": "a8390c12-5cd1-61de-f4a9-20f5aae0b9f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalancer-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:166963536078:loadbalancer/app/loadbalancer/280d55c65a2674cf",
            "arn_suffix": "app/loadbalancer/280d55c65a2674cf",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "loadbalancer-926635936.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:166963536078:loadbalancer/app/loadbalancer/280d55c65a2674cf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0755b8043aca513a3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01f7c88016657cacf"
              },
              {
                "subnet_id": "subnet-05a4f91d2ed947b08"
              },
              {
                "subnet_id": "subnet-0ac4ecea8b57a2bb8"
              }
            ],
            "subnets": [
              "subnet-01f7c88016657cacf",
              "subnet-05a4f91d2ed947b08",
              "subnet-0ac4ecea8b57a2bb8"
            ],
            "tags": {
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "vpc_id": "vpc-0122661467d59c228",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.loadbalancer-lb-security-group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "loadbalancer-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:166963536078:listener/app/loadbalancer/280d55c65a2674cf/636899c39e6b78f9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Could not find the resource you are looking for",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:166963536078:listener/app/loadbalancer/280d55c65a2674cf/636899c39e6b78f9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:166963536078:loadbalancer/app/loadbalancer/280d55c65a2674cf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.loadbalancer-lb",
            "aws_security_group.loadbalancer-lb-security-group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "loadbalancer_rule_DC03D299",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:166963536078:targetgroup/backend-target-group/a364b44cd8808292",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:166963536078:listener-rule/app/loadbalancer/280d55c65a2674cf/636899c39e6b78f9/f55aa311412abed5",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:166963536078:listener-rule/app/loadbalancer/280d55c65a2674cf/636899c39e6b78f9/f55aa311412abed5",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:166963536078:listener/app/loadbalancer/280d55c65a2674cf/636899c39e6b78f9",
            "priority": 100,
            "tags": {
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "owner": "blacksheepcode",
              "team": "cdk"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.loadbalancer-lb",
            "aws_lb_listener.loadbalancer-lb-listener",
            "aws_lb_target_group.loadbalancer_target-group_032D9A6A",
            "aws_security_group.loadbalancer-lb-security-group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "loadbalancer_target-group_032D9A6A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:166963536078:targetgroup/backend-target-group/a364b44cd8808292",
            "arn_suffix": "targetgroup/backend-target-group/a364b44cd8808292",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/ready",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:166963536078:targetgroup/backend-target-group/a364b44cd8808292",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0122661467d59c228"
          },
          "dependencies": [
            "aws_lb.loadbalancer-lb",
            "aws_lb_listener.loadbalancer-lb-listener",
            "aws_security_group.loadbalancer-lb-security-group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example-docker-aws-service-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:security-group/sg-0e7efdd2d1eef843a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7efdd2d1eef843a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0755b8043aca513a3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240208233027769100000005",
            "name_prefix": "terraform-",
            "owner_id": "166963536078",
            "revoke_rules_on_delete": false,
            "tags": {
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0122661467d59c228"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.loadbalancer-lb",
            "aws_security_group.loadbalancer-lb-security-group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadbalancer-lb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:security-group/sg-0755b8043aca513a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0755b8043aca513a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240208232743710800000002",
            "name_prefix": "terraform-",
            "owner_id": "166963536078",
            "revoke_rules_on_delete": false,
            "tags": {
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0122661467d59c228"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:network-acl/acl-012a8027fc9dca3d1",
            "default_network_acl_id": "acl-012a8027fc9dca3d1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-012a8027fc9dca3d1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "166963536078",
            "subnet_ids": [
              "subnet-014b83eb3a9837cd6",
              "subnet-01f221cd23668a85a",
              "subnet-01f7c88016657cacf",
              "subnet-05a4f91d2ed947b08",
              "subnet-06ff93f1624303a55",
              "subnet-0951deb4665d4f4bd",
              "subnet-0a522e6a46cd6c954",
              "subnet-0ac4ecea8b57a2bb8",
              "subnet-0ec3e1966cb0c445f"
            ],
            "tags": {
              "Name": "example-docker-aws-default",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-default",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "vpc_id": "vpc-0122661467d59c228"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:route-table/rtb-080dd84efe8185230",
            "default_route_table_id": "rtb-080dd84efe8185230",
            "id": "rtb-080dd84efe8185230",
            "owner_id": "166963536078",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-docker-aws-default",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-default",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0122661467d59c228"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:security-group/sg-06711eb7448d3ee44",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06711eb7448d3ee44",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "166963536078",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-docker-aws-default",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-default",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "vpc_id": "vpc-0122661467d59c228"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d82bd7e668115ff",
            "association_id": "eipassoc-07ce466ac7c8957de",
            "domain": "vpc",
            "id": "eipalloc-04d82bd7e668115ff",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-06172a309f7f2c74c",
            "private_dns": "ip-10-0-101-134.ap-southeast-2.compute.internal",
            "private_ip": "10.0.101.134",
            "public_dns": "ec2-13-54-84-60.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.54.84.60",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "example-docker-aws-ap-southeast-2a",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-ap-southeast-2a",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:internet-gateway/igw-07bed7301f44995a4",
            "id": "igw-07bed7301f44995a4",
            "owner_id": "166963536078",
            "tags": {
              "Name": "example-docker-aws",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "vpc_id": "vpc-0122661467d59c228"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d82bd7e668115ff",
            "association_id": "eipassoc-07ce466ac7c8957de",
            "connectivity_type": "public",
            "id": "nat-035c23459b3b38f8b",
            "network_interface_id": "eni-06172a309f7f2c74c",
            "private_ip": "10.0.101.134",
            "public_ip": "13.54.84.60",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ac4ecea8b57a2bb8",
            "tags": {
              "Name": "example-docker-aws-ap-southeast-2a",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-ap-southeast-2a",
              "owner": "blacksheepcode",
              "team": "cdk"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06f07b5a449490f831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-035c23459b3b38f8b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f07b5a449490f83",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07bed7301f44995a4",
            "id": "r-rtb-0d5d34a2a1e620d1b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d5d34a2a1e620d1b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:route-table/rtb-06f07b5a449490f83",
            "id": "rtb-06f07b5a449490f83",
            "owner_id": "166963536078",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-035c23459b3b38f8b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-docker-aws-private",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-private",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0122661467d59c228"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:route-table/rtb-0d5d34a2a1e620d1b",
            "id": "rtb-0d5d34a2a1e620d1b",
            "owner_id": "166963536078",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07bed7301f44995a4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-docker-aws-public",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-public",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0122661467d59c228"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0567f7182b2f9f0ba",
            "route_table_id": "rtb-06f07b5a449490f83",
            "subnet_id": "subnet-01f221cd23668a85a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2ef45c9ece525ce",
            "route_table_id": "rtb-06f07b5a449490f83",
            "subnet_id": "subnet-0a522e6a46cd6c954"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dd60df6943f74ce",
            "route_table_id": "rtb-06f07b5a449490f83",
            "subnet_id": "subnet-0951deb4665d4f4bd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba5973d971428a48",
            "route_table_id": "rtb-06f07b5a449490f83",
            "subnet_id": "subnet-014b83eb3a9837cd6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b7c61be290ff6d8",
            "route_table_id": "rtb-06f07b5a449490f83",
            "subnet_id": "subnet-0ec3e1966cb0c445f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0786d6e347a3e87a8",
            "route_table_id": "rtb-06f07b5a449490f83",
            "subnet_id": "subnet-06ff93f1624303a55"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0233bca42dd7f6621",
            "route_table_id": "rtb-0d5d34a2a1e620d1b",
            "subnet_id": "subnet-0ac4ecea8b57a2bb8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfb1bda48a8924a0",
            "route_table_id": "rtb-0d5d34a2a1e620d1b",
            "subnet_id": "subnet-05a4f91d2ed947b08"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038dac889acbe0d46",
            "route_table_id": "rtb-0d5d34a2a1e620d1b",
            "subnet_id": "subnet-01f7c88016657cacf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:subnet/subnet-01f221cd23668a85a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f221cd23668a85a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166963536078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-docker-aws-db-ap-southeast-2a",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-db-ap-southeast-2a",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "vpc_id": "vpc-0122661467d59c228"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:subnet/subnet-0a522e6a46cd6c954",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a522e6a46cd6c954",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166963536078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-docker-aws-db-ap-southeast-2b",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-db-ap-southeast-2b",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "vpc_id": "vpc-0122661467d59c228"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:subnet/subnet-0951deb4665d4f4bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.203.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0951deb4665d4f4bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166963536078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-docker-aws-db-ap-southeast-2c",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-db-ap-southeast-2c",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "vpc_id": "vpc-0122661467d59c228"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:subnet/subnet-014b83eb3a9837cd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014b83eb3a9837cd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166963536078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-docker-aws-private-ap-southeast-2a",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-private-ap-southeast-2a",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "vpc_id": "vpc-0122661467d59c228"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:subnet/subnet-0ec3e1966cb0c445f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec3e1966cb0c445f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166963536078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-docker-aws-private-ap-southeast-2b",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-private-ap-southeast-2b",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "vpc_id": "vpc-0122661467d59c228"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:subnet/subnet-06ff93f1624303a55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ff93f1624303a55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166963536078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-docker-aws-private-ap-southeast-2c",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-private-ap-southeast-2c",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "vpc_id": "vpc-0122661467d59c228"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:subnet/subnet-0ac4ecea8b57a2bb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac4ecea8b57a2bb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166963536078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-docker-aws-public-ap-southeast-2a",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-public-ap-southeast-2a",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "vpc_id": "vpc-0122661467d59c228"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:subnet/subnet-05a4f91d2ed947b08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a4f91d2ed947b08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166963536078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-docker-aws-public-ap-southeast-2b",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-public-ap-southeast-2b",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "vpc_id": "vpc-0122661467d59c228"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:subnet/subnet-01f7c88016657cacf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f7c88016657cacf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166963536078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-docker-aws-public-ap-southeast-2c",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws-public-ap-southeast-2c",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "vpc_id": "vpc-0122661467d59c228"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:166963536078:vpc/vpc-0122661467d59c228",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-012a8027fc9dca3d1",
            "default_route_table_id": "rtb-080dd84efe8185230",
            "default_security_group_id": "sg-06711eb7448d3ee44",
            "dhcp_options_id": "dopt-059a46a1e64dce19f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0122661467d59c228",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-080dd84efe8185230",
            "owner_id": "166963536078",
            "tags": {
              "Name": "example-docker-aws",
              "owner": "blacksheepcode",
              "team": "cdk"
            },
            "tags_all": {
              "Name": "example-docker-aws",
              "owner": "blacksheepcode",
              "team": "cdk"
            }
          }
        }
      ]
    }
  ]
}